<resources>
    <string name="pref_default_text_encoding_default">AutoDetect</string>
    <string name="application_name">Internet</string>
    <string name="choose_upload">Select files to upload</string>
    <string name="new_tab">New window</string>
    <string name="active_tabs">Windows</string>
    <string name="tab_bookmarks">Bookmarks</string>
    <string name="tab_most_visited">Most visited</string>
    <string name="tab_history">History</string>
    <string name="added_to_bookmarks">Added to bookmarks</string>
    <string name="removed_from_bookmarks">Removed from bookmarks</string>
    <string name="sign_in_to" formatted="false">Sign in to %s \"%s\"</string>
    <string name="username">Name</string>
    <string name="password">Password</string>
    <string name="action">Sign in</string>
    <string name="bookmarks_search">Browser</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="title_bar_loading">Loading...</string>
    <string name="page_info">Page info</string>
    <string name="page_info_view">View page info</string>
    <string name="page_info_address">Address:</string>
    <string name="ssl_warnings_header">There are problems with the security certificate for this site</string>
    <string name="ssl_continue">Continue</string>
    <string name="security_warning">Security warning</string>
    <string name="view_certificate">View certificate</string>
    <string name="ssl_untrusted">This certificate is not from a trusted authority</string>
    <string name="ssl_mismatch">The name of the site does not match the name on the certificate</string>
    <string name="ssl_expired">Certificate expired</string>
    <string name="ssl_not_yet_valid">This certificate is not valid yet</string>
    <string name="ssl_certificate">Security certificate</string>
    <string name="ssl_certificate_is_valid">This certificate is valid</string>
    <string name="issued_to">Issued to:</string>
    <string name="common_name">Common name:</string>
    <string name="org_name">Organization:</string>
    <string name="org_unit">Organizational unit:</string>
    <string name="issued_by">Issued by:</string>
    <string name="validity_period">Validity:</string>
    <string name="issued_on">Issued on:</string>
    <string name="expires_on">Expires on:</string>
    <string name="stopping">Stopping...</string>
    <string name="stop">Stop</string>
    <string name="reload">Refresh</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="save">OK</string>
    <string name="do_not_save">Cancel</string>
    <string name="location">Location</string>
    <string name="name">Name</string>
    <string name="http">http://</string>
    <string name="save_to_bookmarks">Add bookmark</string>
    <string name="edit_bookmark">Edit bookmark</string>
    <string name="create_shortcut_bookmark">Add shortcut to Home</string>
    <string name="open_bookmark">Open</string>
    <string name="remove_bookmark">Delete bookmark</string>
    <string name="remove_from_bookmarks">Remove from Bookmarks</string>
    <string name="remove_history_item">Remove from history</string>
    <string name="set_as_homepage">Set as homepage</string>
    <string name="bookmark_saved">Saved to bookmarks</string>
    <string name="bookmark_not_saved">Unable to save</string>
    <string name="homepage_set">Set as homepage</string>
    <string name="bookmark_needs_title">Bookmark must have a name</string>
    <string name="bookmark_needs_url">Bookmark must have a location</string>
    <string name="bookmark_url_not_valid">URL is not valid</string>
    <string name="bookmark_cannot_save_url">Unable to add bookmark</string>
    <string name="delete_bookmark">Delete</string>
    <string name="bookmark_page">Bookmark last-viewed page</string>
    <string name="switch_to_thumbnails">Thumbnail view</string>
    <string name="switch_to_list">List view</string>
    <string name="current_page">from</string>
    <string name="delete_bookmark_warning">Bookmark %s will be deleted</string>
    <string name="open_in_new_window">Open in new window</string>
    <string name="goto_dot">Go</string>
    <string name="find_dot">Find on page</string>
    <string name="select_dot">Select text</string>
    <string name="tab_picker_title">Current windows</string>
    <string name="tab_picker_remove_tab">Close</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="shortcut_bookmark">Bookmark</string>
    <string name="history">History</string>
    <string name="menu_view_download">Downloads</string>
    <string name="copy_page_url">Copy URL</string>
    <string name="share_page">Share page</string>
    <string name="contextmenu_openlink">Open</string>
    <string name="contextmenu_openlink_newwindow">Open in new window</string>
    <string name="contextmenu_bookmark_thislink">Bookmark link</string>
    <string name="contextmenu_savelink">Save link</string>
    <string name="contextmenu_sharelink">Share link</string>
    <string name="contextmenu_copy">Copy</string>
    <string name="contextmenu_copylink">Copy link URL</string>
    <string name="contextmenu_download_image">Save image</string>
    <string name="contextmenu_view_image">View image</string>
    <string name="contextmenu_set_wallpaper">Set as wallpaper</string>
    <string name="contextmenu_dial_dot">Dial...</string>
    <string name="contextmenu_add_contact">Add contact</string>
    <string name="contextmenu_send_mail">Send email</string>
    <string name="contextmenu_map">Map</string>
    <string name="choosertitle_sharevia">Share via</string>
    <string name="clear">Clear</string>
    <string name="replace">Replace</string>
    <string name="browser_bookmarks_page_bookmarks_text">Bookmarks</string>
    <string name="menu_preferences">Settings</string>
    <string name="pref_content_title">Page content settings</string>
    <string name="pref_content_load_images">Load images</string>
    <string name="pref_content_load_images_summary">Display images on Web pages</string>
    <string name="pref_content_block_popups">Block pop-up windows</string>
    <string name="pref_content_javascript">Enable JavaScript</string>
    <string name="pref_content_open_in_background">Open in background</string>
    <string name="pref_content_plugins">Enable plug-ins</string>
    <string name="pref_content_open_in_background_summary">Open new windows behind the current one</string>
    <string name="pref_content_homepage">Set home page</string>
    <string name="pref_content_search_engine">Select search engine</string>
    <string name="pref_content_autofit">Auto-fit pages</string>
    <string name="pref_content_autofit_summary">Format Web pages to fit the screen</string>
    <string name="pref_content_landscape_only">Landscape view only</string>
    <string name="pref_content_landscape_only_summary">Display pages only in wider, landscape view</string>
    <string name="pref_privacy_title">Privacy settings</string>
    <string name="pref_privacy_clear_cache">Clear cache</string>
    <string name="pref_privacy_clear_cache_summary">Clear locally cached content and databases</string>
    <string name="pref_privacy_clear_cache_dlg">Locally cached content and databases will be deleted</string>
    <string name="pref_privacy_clear_cookies">Clear all cookie data</string>
    <string name="pref_privacy_clear_cookies_summary">Clear all browser cookies</string>
    <string name="pref_privacy_clear_cookies_dlg">All cookies will be deleted</string>
    <string name="pref_privacy_clear_history">Clear history</string>
    <string name="pref_privacy_clear_history_summary">Clear the browser navigation history</string>
    <string name="pref_privacy_clear_history_dlg">The browser navigation history will be cleared</string>
    <string name="pref_privacy_clear_form_data">Clear form data</string>
    <string name="pref_privacy_clear_form_data_summary">Clear all the saved form data</string>
    <string name="pref_privacy_clear_form_data_dlg">All saved form data will be deleted</string>
    <string name="pref_privacy_clear_passwords">Clear passwords</string>
    <string name="pref_privacy_clear_passwords_summary">Clear all saved passwords</string>
    <string name="pref_privacy_clear_passwords_dlg">All saved passwords will be deleted</string>
    <string name="pref_privacy_enable_geolocation">Enable location</string>
    <string name="pref_privacy_enable_geolocation_summary">Allow sites to request access to your location</string>
    <string name="pref_privacy_clear_geolocation_access">Clear location access</string>
    <string name="pref_privacy_clear_geolocation_access_summary">Clear location access for all websites</string>
    <string name="pref_privacy_clear_geolocation_access_dlg">Clear location access for all websites</string>
    <string name="pref_security_title">Security settings</string>
    <string name="pref_security_remember_passwords">Remember passwords</string>
    <string name="pref_security_remember_passwords_summary">Save user names and passwords for websites</string>
    <string name="pref_security_save_form_data">Remember form data</string>
    <string name="pref_security_save_form_data_summary">Remember data I type in forms for later use</string>
    <string name="pref_security_show_security_warning">Show security warnings</string>
    <string name="pref_security_show_security_warning_summary">"Show warning if there is a problem with a site's security"</string>
    <string name="pref_security_accept_cookies">Accept cookies</string>
    <string name="pref_security_accept_cookies_summary">Allow sites to save and read \"cookie\" data</string>
    <string name="pref_default_zoom">Default zoom</string>
    <string name="pref_default_zoom_dialogtitle">Default zoom</string>
    <string name="pref_content_load_page">Open pages in overview</string>
    <string name="pref_content_load_page_summary">Show overview of newly opened pages</string>
    <string name="pref_extras_title">Advanced settings</string>
    <string name="pref_extras_website_settings">Website settings</string>
    <string name="pref_extras_website_settings_summary">View advanced settings for individual websites</string>
    <string name="pref_extras_reset_default">Reset to default</string>
    <string name="pref_extras_reset_default_summary">Clear all browser data and reset all settings to default</string>
    <string name="pref_extras_reset_default_dlg">All browser data will be cleared and settings will revert to default values</string>
    <string name="pref_extras_reset_default_dlg_title">Reset to default</string>
    <string name="pref_development_title">Debug</string>
    <string name="pref_development_viewport">Use wide viewport</string>
    <string name="pref_development_single_column_rendering">Single column rendering</string>
    <string name="pref_development_normal_rendering">Normal rendering</string>
    <string name="pref_development_trace">Enable tracing</string>
    <string name="pref_development_nav_dump">Enable navigation cache dump</string>
    <string name="js_engine_flags">Set JS flags</string>
    <string name="pref_development_error_console">Show JavaScript console</string>
    <string name="pref_default_text_encoding">Text encoding</string>
    <string name="pref_default_text_encoding_dialogtitle">Text encoding</string>
    <string name="dump_nav">Dump navigation cache</string>
    <string name="dump_counters">Dump V8 counters</string>
    <string name="geolocation_permissions_prompt_share">Share location</string>
    <string name="geolocation_permissions_prompt_dont_share">Decline</string>
    <string name="geolocation_permissions_prompt_remember">Remember preference</string>
    <string name="menu_brightness_setting">Brightness setting</string>
    <string name="add_rss">Add RSS feeds</string>
    <string name="pref_default_storage">Default storage</string>
    <string name="folder">Folder</string>
</resources>