<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:gravity="fill_horizontal" android:id="@id/titleDivider" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:src="@drawable/dialog_divider_horizontal_light" android:scaleType="fitXY" />
    <ScrollView android:orientation="vertical" android:id="@id/ScrollView01" android:paddingLeft="20.0dip" android:paddingTop="5.0dip" android:paddingRight="20.0dip" android:paddingBottom="13.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:id="@id/LinearLayout01" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <EditText android:textAppearance="?android:textAppearanceMedium" android:gravity="center_vertical" android:id="@id/title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/name" android:maxLines="1" android:scrollHorizontally="true" android:selectAllOnFocus="true" android:maxLength="8192" android:inputType="textCapSentences" />
            <EditText android:textAppearance="?android:textAppearanceMedium" android:gravity="center_vertical" android:id="@id/address" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/location" android:maxLines="1" android:scrollHorizontally="true" android:selectAllOnFocus="true" android:maxLength="8192" android:inputType="textUri" />
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="left" android:id="@id/folderText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/folder" />
                <Spinner android:textAppearance="?android:textAppearanceMedium" android:gravity="fill_horizontal" android:id="@id/folder" android:layout_width="wrap_content" android:layout_height="wrap_content" android:drawSelectorOnTop="true" android:selectAllOnFocus="true" android:layout_weight="1.0" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:orientation="horizontal" android:background="#ffc6c3c6" android:paddingLeft="2.0dip" android:paddingTop="4.0dip" android:paddingRight="2.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="54.0dip">
        <Button android:textAppearance="?android:textAppearanceMedium" android:layout_gravity="left" android:id="@id/OK" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/save" android:maxLines="2" android:layout_weight="1.0" />
        <Button android:textAppearance="?android:textAppearanceMedium" android:layout_gravity="right" android:id="@id/cancel" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/do_not_save" android:maxLines="2" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>
