<?xml version="1.0" encoding="utf-8"?>
<com.android.browser.GeolocationPermissionsPrompt android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/inner" android:background="@color/black" android:paddingTop="1.0px" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <View android:orientation="vertical" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="1.0px" />
        <LinearLayout android:orientation="vertical" android:background="@color/geolocation_permissions_prompt_background" android:padding="6.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textSize="14.0dip" android:textColor="@color/black" android:id="@id/message" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <CheckBox android:id="@id/remember" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                <TextView android:textSize="14.0dip" android:textColor="@color/black" android:paddingLeft="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/geolocation_permissions_prompt_remember" />
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <Button android:id="@id/share_button" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/geolocation_permissions_prompt_share" android:layout_weight="1.0" />
                <Button android:id="@id/dont_share_button" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/geolocation_permissions_prompt_dont_share" android:layout_weight="1.0" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</com.android.browser.GeolocationPermissionsPrompt>
